Fix spacing on login

--- a/src/stylesheets/components/_login.scss
+++ b/src/stylesheets/components/_login.scss
@@ -8,6 +8,7 @@
   color: white;
   background: url('/app/assets/images/login.jpg');
   background-color: $primary-color;
+  margin-top: -75px;
 
   &_title {
     font-size: 54px;
